# cognition

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt  setup_new_pc.ps1
chat-service/: .env.example  Dockerfile  README.md  chat.db  pyproject.toml
chat-service/alembic/: env.py  script.py.mako
chat-service/app/: config.py  main.py
chat-service/app/api/: deps.py
chat-service/app/clients/: context_engine_client.py  llm_client.py
chat-service/app/core/: config.py  exceptions.py  logger.py  security.py
chat-service/app/db/: base.py  init_db.py  session.py
chat-service/app/models/: base.py  chat.py  file.py  message.py  user.py
chat-service/app/repositories/: base.py  chat_repo.py  file_repo.py  message_repo.py  user_repo.py
chat-service/app/schemas/: auth.py  chat.py  common.py  file.py  user.py
chat-service/app/services/: auth.py  auth_service.py  chat_service.py  context_service.py  file_service.py  llm_client.py  llm_service.py
chat-service/app/storage/: s3_client.py
chat-service/app/tasks/: celery_app.py  file_processing.py
chat-service/app/utils/: __init__.py  hashing.py  helpers.py  security.py  validators.py
chat-service/tests/: conftest.py
context-engine/: .env.example  README.md  pyproject.toml
context-engine/context_engine/: __init__.py  main.py
context-engine/context_engine/core/: config.py
context-engine/context_engine/models/: schemas.py
context-engine/context_engine/services/: chunker.py  docx_parser.py  parser_factory.py  pdf_parser.py  txt_parser.py
context-engine/tests/: conftest.py
(+41 files in other folders)
